namespace-per-tenant/handmade/multi-team/team-1-ecommerce/network-policy-tenant-1.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: e-commerce
  name: deny-from-other-tenant
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
